[package]
name = "simd-demo"
version = "0.1.0"
authors = ["Kreedzt <zhaozisong1@live.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# stdsimd = "0.1.2
faster = "0.5.1"

[[bin]]
path = "src/auto_vector.rs"
name = "auto_vector"

[[bin]]
path = "src/main.rs"
name = "main"

[[bin]]
path = "src/faster.rs"
name = "faster"